infra/k8s/issuer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: issuer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: issuer
  template:
    metadata:
      labels:
        app: issuer
    spec:
      containers:
        - name: issuer
          image: oyyblin/zk-ticketing-issuer
          ports:
            - containerPort: 9090
          resources:
            limits:
              memory: "500Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: issuer
spec:
  type: NodePort
  ports:
    - port: 9090
  selector:
    app: issuer
