infra/k8s/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: server
          image: server
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: server
spec:
  type: LoadBalancer
  ports:
    - port: 3000
  selector:
    app: server
